--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ MONGODB_URL = mongodb+srv://admin:admin@cluster0.omipj.mongodb.net/myFirstDataba
 
 CLOUD_API_KEY = 445684462961675
 CLOUD_API_SECRET = PO5lv44oHRq7e-6c9LauQ5Efb_4
-CLOUD_NAME = blog
+CLOUD_NAME = dedpra0t4
 
 
 REFRESH_TOKEN_SECRET = YOUR_REFRESH_TOKEN_SECRET
